# flake8-no-implicit-concat

./: .codecov.yaml  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yaml
flake8_no_implicit_concat/: __init__.py  _version.py  checker.py
tests/: __init__.py  run.sh  test_checker.py
tests/files/: backslash.py  backslash.py.expected  blanklines.py  blanklines.py.expected  comment.py.expected  fstring.py.expected  list.py  list.py.expected  noerror.py  oneline.py.expected  triplequote.py.expected
tests/run_flake8/: Run.sh  backslash.py.expected  blanklines.py  blanklines.py.expected  bytes.py  bytes.py.expected  classdoc.py  comment.py  comment.py.expected  fstring.py  fstring.py.expected  list.py.expected  multiline.py  multiline.py.expected  noerror.py  noerror.py.expected  oneline.py  oneline.py.expected  triplequote.py  triplequote.py.expected
