[metadata]
name = flake8-no-implicit-concat
version = attr: flake8_no_implicit_concat.__version__
description = Flake8 plugin that forbids any implicit string concatenations
long_description = file: README.md
long_description_content_type = text/markdown
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/flake8-no-implicit-concat
keywords = flake8
license = MIT
classifiers =
  License :: OSI Approved :: MIT License
  Framework :: Flake8
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8


[options]
packages = find:
install_requires =
  flake8
  attrs ~= 19.3
  more-itertools >= 8.0.2, < 9

[options.packages.find]
exclude =
  tests

[options.extras_require]
dev =
  black
  isort
  flake8
  flake8-black
  flake8-isort
  pep8-naming
  flake8-docstrings
  darglint
  mypy
  coverage
  codecov


[coverage:run]
branch = True
omit =
  tests/*
  .venv/*

[coverage:report]
exclude_lines =
  if self.debug:
  pragma: no cover
  raise NotImplementedError
  if __name__ == .__main__.:
ignore_errors = True


[flake8]
extend-ignore =
  E203,  # See https://github.com/peterjc/flake8-black#configuration, https://github.com/PyCQA/pycodestyle/issues/373
  F401,  # imported but unused
  E501,  # line too long
exclude =
  .git,
  __pycache__,
  .venv,
  .mypy_cache,
  docs,
  build,
  tests/run_flake8,


[isort]
# skip = tests/
# Be happy with black formatter
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
lines_between_types = 1
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = tests


[darglint]
docstring_style = sphinx


[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.8
platform = linux

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = True

# show error messages from unrelated files
follow_imports = normal

# # suppress errors about unsatisfied imports
ignore_missing_imports = True
