[metadata]
name = flake8-no-implicit-concat
# use_scm_version =
#   write_to = flake8_no_implicit_concat/_version.py
description = Flake8 plugin that forbids implicit str/bytes literal concatenations
long_description = file: README.md
long_description_content_type = text/markdown
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/flake8-no-implicit-concat
keywords = flake8
license = MIT
project_urls =
  Bug Tracker = https://github.com/10sr/flake8-no-implicit-concat/issues
  Changelog = https://github.com/10sr/flake8-no-implicit-concat/blob/master/CHANGELOG.md
classifiers =
  License :: OSI Approved :: MIT License
  Environment :: Console
  Framework :: Flake8
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Software Development :: Quality Assurance


[options]
python_requires = >=3.6
packages = find:
install_requires =
  flake8
  more-itertools; python_version<"3.10"
setup_requires =
  wheel
  setuptools_scm>=6.0

[options.entry_points]
flake8.extension =
  NIC = flake8_no_implicit_concat:Checker

[options.packages.find]
exclude =
  tests

[options.extras_require]
dev =
  black
  isort
  flake8
  hacking>=4
  flake8-black
  flake8-isort
  pep8-naming
  flake8-broken-line
  flake8-builtins
  flake8-2020
  flake8-docstrings
  flake8-rst-docstrings
  darglint
  mypy
  coverage
  codecov


[coverage:run]
branch = True
omit =
  tests/*
  .venv/*

[coverage:report]
exclude_lines =
  if self.debug:
  pragma: no cover
  raise NotImplementedError
  if __name__ == .__main__.:
ignore_errors = True


[flake8]
extend-ignore =
  # See https://github.com/peterjc/flake8-black#configuration, https://github.com/PyCQA/pycodestyle/issues/373
  E203,
  # line too long
  E501,
exclude =
  .git,
  __pycache__,
  .venv,
  .mypy_cache,
  docs,
  build,
  tests/run_flake8,
  flake8_no_implicit_concat/_version.py,


[isort]
# Be happy with black formatter and hacking linter
force_single_line = true
line_length = 88
lines_between_types = 1


[darglint]
docstring_style = sphinx


[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.12
platform = linux

# show error messages from unrelated files
follow_imports = normal

# suppress errors about unsatisfied imports
# ignore_missing_imports = True
